fix: restore to semantic html scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -17,59 +17,3 @@ main {
   display: flex;
   flex-direction: column;
 }
-
-/* For Chrome, Safari, Edge */
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  /* Remove default styling */
-  margin: 0;
-  /* Remove margin */
-}
-
-/* General styling for all browsers */
-input[type="number"] {
-  appearance: none;
-  /* Remove default styling */
-}
-
-.successButton {
-  color: #28a745;
-}
-
-.successButton:disabled {
-  color: #999999;
-}
-
-/* Global scrollbar styles for Webkit browsers (Chrome, Safari) */
-::-webkit-scrollbar {
-  width: thin;
-  /* Vertical scrollbar width */
-  height: thin;
-  /* Horizontal scrollbar height */
-}
-
-::-webkit-scrollbar-thumb {
-  background: red;
-  /* Scrollbar thumb color */
-  border-radius: 10px;
-  /* Rounded corners */
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: red;
-  /* Thumb color on hover */
-}
-
-::-webkit-scrollbar-track {
-  background: red;
-  /* Scrollbar track color */
-}
-
-/* Global scrollbar styles for Firefox */
-html {
-  scrollbar-width: thin;
-  /* Options: auto, thin */
-  scrollbar-color: #ffcc00 #000;
-  /* thumb color, track color */
-}
